# rules_oss_audit

./: .bazelrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE.bazel
examples/: App.java  BUILD.bazel
examples/data/: approved_list.yaml  denied_list.yaml
oss_audit/: BUILD.bazel  repositories.bzl  setup.bzl
oss_audit/java/: oss_audit.bzl
oss_audit/tools/: BUILD.bazel  generate_boms.py  licensetool.py
